--- a/src/style.css
+++ b/src/style.css
@@ -26,7 +26,8 @@ body {
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	gap: 50px;
+	row-gap: 10px;
+	column-gap: 5px;
 }
 .ship {
 	background-color: burlywood;
