--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,7 @@ body {
 	grid-template-columns: repeat(8, 50px);
 }
 .cell {
-	border: 2px solid black;
+	border: 0.1px dashed black;
 	height: 50px;
 	background-color: aquamarine;
 }
