--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,7 @@ body {
 	border: 0.1px dashed black;
 	height: 50px;
 	background-color: aquamarine;
+	cursor: pointer;
 }
 .cell:hover {
 	background-color: aqua;
@@ -22,7 +23,7 @@ body {
 	background-color: antiquewhite;
 }
 .ships-container {
-	border: 1px solid violet;
+	/* border: 1px solid violet; */
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
@@ -33,7 +34,15 @@ body {
 	background-color: burlywood;
 	height: 50px;
 	min-width: 50px;
+	cursor: move;
+	display: flex;
+	flex-direction: row;
 }
 .ship:hover {
 	background-color: pink;
+}
+.ship-part {
+	border: 1px solid black;
+	width: 50px;
+	color: white;
 }
